# fastQR

./: .gitignore  README.md
front_end/: package-lock.json  package.json  rollup.config.js
front_end/src/: App.svelte  main.js
qr_code_encoder/: Cargo.toml
qr_code_encoder/src/: lib.rs
