[package]
name = "qr_code_encoder"
version = "0.1.0"
authors = ["HellowThar <49899462+HellowThar@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
qrcode-generator = "4.1.0"
wasm-bindgen = "0.2.73"


[dependencies.web-sys]
version = "0.3.50"
# features = [
#     'Document',
#     'Window',
#     'Element',
#     'Blob',
#     'BlobPropertyBag',
#     'Url',
#     'console'
# ]

[patch.crates-io]
qrcode-generator = {path = "../qrcode_generator"}